--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pep8 = "*"
+autopep8 = "*"
+flake8 = "*"
+bandit = "*"
 
 [packages]
 djangorestframework = "==3.9.2"
