--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development ./fend/src/index.js --output ./fend/static/fend/main.js",
+    "dev": "webpack --mode development --watch ./fend/src/index.js --output ./fend/static/fend/main.js",
     "build": "webpack --mode production ./fend/src/index.js --output ./fend/static/fend/main.js"
   },
   "repository": {
@@ -24,16 +24,32 @@
   "homepage": "https://github.com/kimbugp/iot-dashboard#readme",
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
   },
   "dependencies": {
-    "prop-types": "^15.7.2",
+    "@babel/runtime": "^7.5.5",
+    "@material-ui/core": "^4.0.0",
+    "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0",
+    "gapi": "0.0.3",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "serve": "^11.0.1"
   }
 }
