--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,6 @@
+
 [pytest]
 DJANGO_SETTINGS_MODULE = config.default
-addopts = --cov-report html --cov-report term-missing --cov=. 
-# -- recommended but optional:
-python_files = tests.py test_*.py *_tests.py
+addopts = --cov-report html --cov-report term-missing --cov=apps
 
 exclude = tests/*
