--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ export DJANGO_SETTINGS_MODULE='config.default'
 export DATABASE_URL='url'
 export SOCIAL_AUTH_GOOGLE_OAUTH2_KEY='qwertytrewq'
 export SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET='asdfghfdsfg'
+export REDIS_URL=redis://127.0.0.1:6379/1
