--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ django-rest-framework-social-oauth2 = "==1.1.0"
 django-filter = "==2.1.0"
 whitenoise = "==4.1.2"
 django-cors-headers = "==3.0.1"
+django-redis = "*"
 
 [requires]
 python_version = "3.6"
