--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,4 @@ export DATABASE_URL='url'
 export SOCIAL_AUTH_GOOGLE_OAUTH2_KEY='qwertytrewq'
 export SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET='asdfghfdsfg'
 export REDIS_URL=redis://127.0.0.1:6379/1
+export BASE_URL=http:/localhost:8000/
