--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "gapi": "0.0.3",
+    "highcharts": "^7.1.3",
+    "highcharts-react-official": "^2.2.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
