--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - psql -c 'create database testdb;' -U postgres
 
 script:
-  # - pytest
+  - pytest
   - flake8
 
 after_success:
