--- a/Pipfile
+++ b/Pipfile
@@ -8,15 +8,16 @@ pep8 = "*"
 autopep8 = "*"
 flake8 = "*"
 bandit = "*"
-pytest-django = "==3.5.1"
 pytest-cov = "==2.7.1"
+pytest = "==5.1.1"
+pytest-django = "==3.5.1"
 
 [packages]
 djangorestframework = "==3.9.2"
-psycopg2-binary = "*"
+psycopg2-binary = "==2.8.3"
 gunicorn = "==19.9.0"
 dj-database-url = "==0.5.0"
-django = ">=2.2.4"
+django = "==2.2.4"
 pyjwt = "==1.4.2"
 social-auth-app-django = "==3.1.0"
 coreapi = "==2.3.3"
@@ -24,7 +25,16 @@ django-rest-framework-social-oauth2 = "==1.1.0"
 django-filter = "==2.1.0"
 whitenoise = "==4.1.2"
 django-cors-headers = "==3.0.1"
-django-redis = "*"
+django-redis = "==4.10.0"
+coreschema = "==0.0.4"
+django-oauth-toolkit = "==1.2.0"
+redis = "==3.3.8"
+social-auth-core = "==3.2.0"
+ddt = "==1.2.1"
+defusedxml = "==0.6.0"
+flake8 = "==3.7.8"
+pytest = "==5.1.1"
+pytest-django = "==3.5.1"
 
 [requires]
 python_version = "3.6"
