--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
-
 [pytest]
 DJANGO_SETTINGS_MODULE = config.default
 addopts = --cov-report html --cov-report term-missing --cov=apps
+python_files = tests.py test_*.py *_test.py
 
 exclude = tests/*
