--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,4 @@ DJANGO_SETTINGS_MODULE = config.default
 addopts = --cov-report html --cov-report term-missing --cov=apps
 python_files = tests.py test_*.py *_test.py
 
-exclude = tests/*
+exclude = tests.py test_*.py *_test.py
